<resources>
    <string name="app_name" translatable="false">Maréu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_meeting">Add meeting</string>
    <string name="meeting_name">Meeting Name</string>
    <string name="select_the_meeting_room">Select the meeting Room</string>
    <string name="email_address">Email Address</string>
    <string name="creator">Creator</string>
    <string name="create">Create</string>
    <string name="next">Next</string>
    <string name="select_place">Select Place</string>
    <string name="select">Select</string>
    <string name="add_new_e_mail">Add new e-Mail</string>
    <string name="full_day">Full Day</string>
    <string name="ending">Ending</string>
    <string name="begining">Begining</string>
    <string name="floor">Floor</string>
    <string name="capacity">Capacity</string>
    <string name="participant">Participant</string>
</resources>