<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Fragment.MeetingInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/meetingInfoActionBar"
            layout="@layout/action_bar_add_meeting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/meetingInfoCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meetingInfoActionBar"
            app:strokeColor="@color/purple_700"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/meetingInfoNameTv"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/meetingInfoSeparator1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/meetingInfoNameTv" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/ic_horloge_gris"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintEnd_toStartOf="@+id/textView5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meetingInfoSeparator1" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/full_day"
                    app:layout_constraintEnd_toStartOf="@+id/meetingInfoFullDayRb"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/meetingInfoSeparator1" />

                <RadioButton
                    android:id="@+id/meetingInfoFullDayRb"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:enabled="false"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5" />

                <TextView
                    android:id="@+id/meetingInfoStartDateTv"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical|end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/meetingInfoEndDateTv"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical|end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/meetingInfoStartDateTv" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="70dp"
                    android:layout_height="0dp"
                    android:gravity="start|center_vertical"
                    android:paddingStart="5dp"
                    android:text="@string/ending"
                    app:layout_constraintBottom_toBottomOf="@+id/meetingInfoEndDateTv"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="@+id/meetingInfoEndDateTv" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="70dp"
                    android:layout_height="0dp"
                    android:gravity="start|center_vertical"
                    android:paddingStart="5dp"
                    android:text="@string/begining"
                    app:layout_constraintBottom_toBottomOf="@+id/meetingInfoStartDateTv"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/meetingInfoSeparator2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meetingInfoEndDateTv" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/ic_place_location_gris"
                    app:layout_constraintBottom_toBottomOf="@+id/meetingInfoRoomNameTv"
                    app:layout_constraintEnd_toStartOf="@+id/meetingInfoRoomNameTv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/meetingInfoRoomNameTv" />

                <TextView
                    android:id="@+id/meetingInfoRoomNameTv"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:gravity="start|center_vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/meetingInfoSeparator2" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="70dp"
                    android:layout_height="0dp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/floor"
                    app:layout_constraintBottom_toBottomOf="@+id/meetingInfoRoomFloorTv"
                    app:layout_constraintStart_toStartOf="@+id/meetingInfoRoomNameTv"
                    app:layout_constraintTop_toTopOf="@+id/meetingInfoRoomFloorTv" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="70dp"
                    android:layout_height="0dp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/capacity"
                    app:layout_constraintBottom_toBottomOf="@+id/meetingInfoRoomCapacityTv"
                    app:layout_constraintStart_toStartOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/meetingInfoRoomFloorTv" />

                <TextView
                    android:id="@+id/meetingInfoRoomFloorTv"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical|end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/meetingInfoRoomNameTv" />

                <TextView
                    android:id="@+id/meetingInfoRoomCapacityTv"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical|end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView16"
                    app:layout_constraintTop_toBottomOf="@+id/meetingInfoRoomFloorTv" />

                <TextView
                    android:id="@+id/meetingInfoSeparator3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meetingInfoRoomCapacityTv" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="11dp"
                    android:background="@drawable/ic_group_of_people_gris"
                    app:layout_constraintBottom_toBottomOf="@+id/textView18"
                    app:layout_constraintEnd_toStartOf="@+id/textView18"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meetingInfoSeparator3" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/participant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView17"
                    app:layout_constraintTop_toBottomOf="@+id/meetingInfoSeparator3" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/meetingInfoParticipantRv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxHeight="200dp"
                    android:paddingStart="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView18"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>